0.1.3 (master)
* 2 minor changes
  * Bumped required version of validatable so validate, validate_on_create, and validate_on_update work properly
  * Added observers
  * More thorough use of converting find conditions and options to mongo criteria and options
  
0.1.2 7/3/2009
* 2 minor changes
  * Straightened out callbacks and added validate, validate_on_create and validate_on_update.
  * Attributes passed into attributes= now call writer methods if they exist. This is mostly for virtual attributes.
  
0.1.1 6/28/2009
* 1 minor change
  * bumped ruby driver to 0.9 and removed hacks I had in while waiting for it
  
0.1.0 6/26/2009
* Initial release