@@ -1,8 +1,9 @@
 0.1.3 (master)
-* 2 minor changes
+* 2 minor changes, 1 major addition, 1 minor fix
   * Bumped required version of validatable so validate, validate_on_create, and validate_on_update work properly
   * Added observers
   * More thorough use of converting find conditions and options to mongo criteria and options
+  * #attributes= no longer bombs when given nil
   
 0.1.2 7/3/2009
 * 2 minor changes
